==> no-one-wu/GD32F407-EnvironmentalMonitor/applications/actuate/RC522/rc522.c <==
#define APPLICATIONS_RC522_RC522_C_
#include "rtthread.h"
#include "rc522.h"
#include <string.h>
#include "board.h"
#define  DATA_LEN    16                      // 定义数据字节长度
#define RC522_I2C_BUS_NAME          "i2c3"  /* 传感器连接的I2C总线设备名称 */

char PcdRequest(unsigned char req_code, unsigned char *pTagType)
{
    char status;
    unsigned char unLen;
    unsigned char ucComMF522Buf[MAXRLEN];

    PcdAntennaOff();    //关闭天线 清除寄存器
    rt_thread_mdelay(2);
    PcdAntennaOn();     //开启天线（每次启动或关闭天险发射之间应至少有1ms的间隔）RC632寄存器
    rt_thread_mdelay(2);

    ClearBitMask(Status2Reg, 0x08);
    WriteRawRC(BitFramingReg, 0x07);
    SetBitMask(TxControlReg, 0x03);

    ucComMF522Buf[0] = req_code;

    status = PcdComMF522(PCD_TRANSCEIVE, ucComMF522Buf, 1, ucComMF522Buf, &unLen);

    if ((status == MI_OK) && (unLen == 0x10))
    {
        *pTagType = ucComMF522Buf[0];
        *(pTagType + 1) = ucComMF522Buf[1];
    }
    else
    {
        status = MI_ERR;
    }

    return status;
}

char PcdAnticoll(unsigned char *pSnr)
{
    char status;
    unsigned char i, snr_check = 0;
    unsigned char unLen;
    unsigned char ucComMF522Buf[MAXRLEN];

    ClearBitMask(Status2Reg, 0x08);
    WriteRawRC(BitFramingReg, 0x00);
    ClearBitMask(CollReg, 0x80);

    ucComMF522Buf[0] = PICC_ANTICOLL1;
    ucComMF522Buf[1] = 0x20;

    status = PcdComMF522(PCD_TRANSCEIVE, ucComMF522Buf, 2, ucComMF522Buf, &unLen);

    if (status == MI_OK)
    {
        for (i = 0; i < 4; i++)
        {
            *(pSnr + i) = ucComMF522Buf[i];
            snr_check ^= ucComMF522Buf[i];
        }
        if (snr_check != ucComMF522Buf[i])
        {
            status = MI_ERR;
        }
    }

    SetBitMask(CollReg, 0x80);
    return status;
}

char PcdAuthState(unsigned char auth_mode, unsigned char addr, unsigned char *pKey, unsigned char *pSnr)
{
    char status;
    unsigned char unLen;
    unsigned char ucComMF522Buf[MAXRLEN];

    ucComMF522Buf[0] = auth_mode;
    ucComMF522Buf[1] = addr;
    memcpy(&ucComMF522Buf[2], pKey, 6);
    memcpy(&ucComMF522Buf[8], pSnr, 4);

    status = PcdComMF522(PCD_AUTHENT, ucComMF522Buf, 12, ucComMF522Buf, &unLen);
    if ((status != MI_OK) || (!(ReadRawRC(Status2Reg) & 0x08)))
    {
        status = MI_ERR;
    }

    return status;
}

void CalulateCRC(unsigned char *pIn, unsigned char len, unsigned char *pOut)
{
    unsigned char i, n;
    ClearBitMask(DivIrqReg, 0x04);
    WriteRawRC(CommandReg, PCD_IDLE);
    SetBitMask(FIFOLevelReg, 0x80);
    for (i = 0; i < len; i++)
    {
        WriteRawRC(FIFODataReg, *(pIn + i));
    }
    WriteRawRC(CommandReg, PCD_CALCCRC);
    i = 0xFF;
    do
    {
        n = ReadRawRC(DivIrqReg);
        i--;
    } while ((i != 0) && !(n & 0x04));
    pOut[0] = ReadRawRC(CRCResultRegL);
    pOut[1] = ReadRawRC(CRCResultRegM);
}

char PcdReset(void)
{

    rt_hw_us_delay(10);
    WriteRawRC(CommandReg, PCD_RESETPHASE); //掉电
    WriteRawRC(CommandReg, PCD_RESETPHASE); //掉电
    rt_hw_us_delay(10);

    WriteRawRC(ModeReg, 0x3D);            //和Mifare卡通讯，CRC初始值0x6363
    WriteRawRC(TReloadRegL, 30);          //定时器低8位 //48
    WriteRawRC(TReloadRegH, 0);           //定时器高8位   //9.5ms
    WriteRawRC(TModeReg, 0x8D);           //定时器时钟预分频高4位
    WriteRawRC(TPrescalerReg, 0x3E);      //定时器时钟预分频高8位  //1342

    WriteRawRC(TxAutoReg, 0x40);      //必须要       //手册里面没有

    return MI_OK;
}

char M500PcdConfigISOType(unsigned char type)
{
    if (type == 'A')                     //ISO14443_A
    {
        ClearBitMask(Status2Reg, 0x08);
        WriteRawRC(ModeReg, 0x3D);                     //3F
        WriteRawRC(RxSelReg, 0x86);                     //84
        WriteRawRC(RFCfgReg, 0x7F);   //4F
        WriteRawRC(TReloadRegL, 30);   //tmoLength);// TReloadVal = 'h6a =tmoLength(dec)
        WriteRawRC(TReloadRegH, 0);
        WriteRawRC(TModeReg, 0x8D);
        WriteRawRC(TPrescalerReg, 0x3E);
        rt_hw_us_delay(1000);
        PcdAntennaOn();
    }
    else
    {
        return 1;
    }

    return MI_OK;
}

char PcdComMF522(unsigned char Command, unsigned char *pIn, unsigned char InLenByte, unsigned char *pOut,
        unsigned char *pOutLenBit)
{
    char status = MI_ERR;
    unsigned char irqEn = 0x00;
    unsigned char waitFor = 0x00;
    unsigned char lastBits;
    unsigned char n;
    unsigned int i;
    switch (Command)
    {
    case PCD_AUTHENT:
        irqEn = 0x12;
        waitFor = 0x10;
        break;
    case PCD_TRANSCEIVE:
        irqEn = 0x77;
        waitFor = 0x30;
        break;
    default:
        break;
    }

    WriteRawRC(ComIEnReg, irqEn | 0x80);
    ClearBitMask(ComIrqReg, 0x80);   //清所有中断位
    WriteRawRC(CommandReg, PCD_IDLE);
    SetBitMask(FIFOLevelReg, 0x80);      //清FIFO缓存

    for (i = 0; i < InLenByte; i++)
    {
        WriteRawRC(FIFODataReg, pIn[i]);
    }
    WriteRawRC(CommandReg, Command);
//       n = ReadRawRC(CommandReg);

    if (Command == PCD_TRANSCEIVE)
    {
        SetBitMask(BitFramingReg, 0x80);     //开始传送
    }

    //i = 600;//根据时钟频率调整，操作M1卡最大等待时间25ms
    i = 2000;
    do
    {
        n = ReadRawRC(ComIrqReg);
        i--;
    } while ((i != 0) && !(n & 0x01) && !(n & waitFor));
    ClearBitMask(BitFramingReg, 0x80);

    if (i != 0)
    {
        if (!(ReadRawRC(ErrorReg) & 0x1B))
        {
            status = MI_OK;
            if (n & irqEn & 0x01)
            {
                status = MI_NOTAGERR;
            }
            if (Command == PCD_TRANSCEIVE)
            {
                n = ReadRawRC(FIFOLevelReg);
                lastBits = ReadRawRC(ControlReg) & 0x07;
                if (lastBits)
                {
                    *pOutLenBit = (n - 1) * 8 + lastBits;
                }
                else
                {
                    *pOutLenBit = n * 8;
                }
                if (n == 0)
                {
                    n = 1;
                }
                if (n > MAXRLEN)
                {
                    n = MAXRLEN;
                }
                for (i = 0; i < n; i++)
                {
                    pOut[i] = ReadRawRC(FIFODataReg);
                }
            }
        }
        else
        {
            status = MI_ERR;
        }

    }

    SetBitMask(ControlReg, 0x80);           // stop timer now
    WriteRawRC(CommandReg, PCD_IDLE);
    return status;
}

unsigned char ReadRawRC(unsigned char Address)
{
    unsigned char ucResult = 0;
    ucResult = RC522_RD_Reg(SLA_ADDR, Address);
    return ucResult;                //返回收到的数据
}

void WriteRawRC(unsigned char Address, unsigned char value)
{
    RC522_WR_Reg(SLA_ADDR, Address, value);
}
